<resources>
    <string name="app_name">AirChat</string>
    <string name="app_slogan">一款基于密码学的加密聊天工具。</string>
    <string name="share_s1">1fcce4b6ac678</string>
    <string name="share_s2">17979507b37b53420b870df588319ddf</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="rlistview_header_hint_normal">下拉加载</string>
    <string name="rlistview_header_hint_ready">松开加载数据</string>
    <string name="rlistview_header_hint_loading">正在加载...</string>

    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收缩</string>

    <string name="select_start_time">选择开始日期</string>
    <string name="select_end_time">选择结束日期</string>

    <string name="dialog_alert_tip">提示</string>
    <string name="dialog_alert_ok">确定</string>
    <string name="dialog_alert_cancel">取消</string>

    <string name="action_setting">设置</string>
    <string name="action_scan">扫描</string>
    <string name="action_add">新建</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>
    <string name="action_search">查找</string>
    <string name="action_clear">清除</string>
    <string name="action_confirm">确认</string>
    <string name="str_waiting_for_download">下载中...</string>
    <string name="str_waiting_for_loading">请稍后...</string>
    <string name="str_waiting_for_submit">正在提交，请稍后...</string>
    <string name="str_error_data">数据获取失败...</string>
    <string name="str_error_operate">操作失败...</string>
    <string name="str_error_page">页面暂不可用...</string>
    <string name="str_warn_delete">非创建者，不允许删除！</string>
    <string name="str_warn_include">仅教师可推荐话题！</string>
    <string name="str_warn_edit">非创建者，不允许修改！</string>
    <string name="delete_confirm_tips">确定删除数据？</string>
    <string name="submit_confirm_tips">提交后将无法修改数据，确定？</string>
    <string name="search_hint">Search</string>
    <string name="audio_record_start_tips">点击开始录音</string>
    <string name="audio_record_stop_tips">点击停止录音</string>
    <string name="audio_play_start_tips">点击播放</string>
    <string name="audio_play_pause_tips">点击暂停</string>

    <string name="account_register">用户注册</string>
    <string name="account_other">其他操作</string>

    <string name="server_setting">服务器设置</string>
    <string name="account_find_pwd">登录遇到困难</string>


    <string name="prompt_userInfo">请输入用户名称</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_account">请输入Air号</string>
    <string name="prompt_password">请输入用户密码</string>
    <string name="prompt_caption">请输入您的尊称</string>
    <string name="prompt_smsCode">请输入短信验证码</string>
    <string name="action_sign_in">登陆</string>
    <string name="prompt_message_tip">请输入信息内容</string>
    <string name="prompt_comment_tip">请输入回复内容</string>

    <string name="prompt_server">请输入服务器地址</string>
    <string name="prompt_port">请输入服务器端口</string>

    <string name="error_invalid_password">请输入密码</string>
    <string name="error_account_required">请输入账户</string>
    <string name="error_tel_required">请输入有效手机号</string>
    <string name="error_userInfo_required">请输入有效信息</string>
    <string name="error_caption_required">给自己取个昵称吧</string>
    <string name="str_exit_app">再次点击返回按钮将关闭程序</string>
    <string name="none_select">未选择</string>

    <string name="menu_clear">清除</string>
    <string name="menu_today">今天</string>
    <string name="menu_confirm">确认</string>
    <string name="menu_own">我的</string>
    <string name="menu_upload">上传</string>
    <string name="menu_history">历史</string>
    <string name="menu_add">新增</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_close">关闭</string>
    <string name="menu_help">帮助</string>
    <string name="menu_cancel">取消</string>
    <string name="menu_delete">删除</string>
    <string name="menu_manage">管理</string>
    <string name="menu_scan">扫码</string>
    <string name="menu_course">选课</string>
    <string name="menu_share">分享</string>
    <string name="menu_fresh">刷新</string>
    <string name="menu_copy_url">复制链接</string>
    <string name="menu_read">全部阅读</string>

    <string name="profile_QR">个人二维码</string>
    <string name="org_QR">学校二维码</string>
    <string name="error_QR">错误的二维码</string>
    <string name="app_unValid">应用已下架</string>

    <string name="coming_soon">即将开放...</string>
    <string name="content_warning">内容可能因审核或缓存延迟</string>
    <string name="identify_warning">认证通过后，修改认证信息需要重新通过认证！</string>
    <string name="str_wifi_set">当前设置为数据网络不能下载应用，请到【用户中心-系统设置】中修改。</string>
    <string name="sign_warning">如关闭窗口，可稍后再次打开详情，重新签收。</string>
    <string name="content_qrcode">扫码下载App</string>
    <string name="section_format">this is section: %1$d</string>
    <string name="chooser_set">已选(%s)</string>
    <string name="number_set">(%s)</string>
    <string name="count_set">%1$s/%2$s</string>
    <string name="time_set">时间：%s</string>
    <string name="from_set">来自：%s</string>
    <string name="version_set">当前版本：%s</string>
    <string name="new_version">新版本号：%s</string>
    <string name="comment_set">评论(%s)</string>
    <string name="attachment_set">附件(%s)</string>
    <string name="vote_set">赞(%s)</string>
    <string name="member_set">%s人</string>
    <string name="day_set">%s天</string>
    <string name="read_set">阅读(%s)</string>
    <string name="coor_node_info">共(%s)个流程节点</string>
    <string name="profile_name">昵称：%s</string>
    <string name="profile_intro">签名：%s</string>
    <string name="course_enroll">课程人数(%s)人</string>

    <string name="price_set">¥ %s</string>
    <string name="num_set">x %s</string>
    <string name="pay_sms">立即预约</string>
    <string name="pay_mobile">在线支付</string>

    <!-- 流程与表单相关按钮 -->
    <string name="btn_attach">附件</string>
    <string name="btn_flow">流程</string>
    <string name="btn_save">保存</string>
    <string name="btn_submit">提交</string>
    <string name="btn_do">处理</string>

    <!-- 分享接口文字 -->
    <string name="share_info">点击下载门户APP</string>

    <string name="sliding_down_tips">下拉打开面板</string>
    <string name="sliding_up_tips">上滑关闭面板</string>

    <string name="hug_txt">
        杯子在多数时候，盛装的仅仅是半杯水，遇见的那个人依然似乎无法填补内心的空洞，时间一点一点地过去，水也一点一点地蒸发掉，你开始觉得他越来越无法满足你的全部幻想全部期待，对望的时候，彼此的眼里充满了空洞犹疑。杯子里面的水终于全部消失。分离是如此容易的一件事，就连曾经淡淡的水痕都刹那间无影无踪。生活似乎回到了最初的样子，天依旧蓝得透心，城市依旧匆忙得落寞。只是你不明白，为什么在每一个狂欢之夜，隐藏在人群中望着烟花绽放的夜空，会一边默默地流泪，一边强作笑颜。你对自己说是因为感动于这绚烂，没错，一切都太绚烂，绚烂得已经让你不知所措，绚烂得已经让你相信一切希望与期待都未曾出现过。于是决定走开，带着一只空旷而干涸的杯子，有的时候一边走一边疑惑，世界那么大，为什么那么渺小孤单的一滴雨还是会打在自己的脸庞上呢，人潮汹涌，流走的水再也无法收集，过去的心境再也无法找寻。有的时候，你在一些奇怪的梦里恍惚地以为曾经的一汪水，还心满意足地躺在自己杯子里面，只有醒过来的时候才了解，即使是沧海，多年之后也化作了桑田。杯子在多数时候，盛装的仅仅是半杯水，遇见的那个人依然似乎无法填补内心的空洞，时间一点一点地过去，水也一点一点地蒸发掉，你开始觉得他越来越无法满足你的全部幻想全部期待，对望的时候，彼此的眼里充满了空洞犹疑。杯子里面的水终于全部消失。分离是如此容易的一件事，就连曾经淡淡的水痕都刹那间无影无踪。生活似乎回到了最初的样子，天依旧蓝得透心，城市依旧匆忙得落寞。只是你不明白，为什么在每一个狂欢之夜，隐藏在人群中望着烟花绽放的夜空，会一边默默地流泪，一边强作笑颜。你对自己说是因为感动于这绚烂，没错，一切都太绚烂，绚烂得已经让你不知所措，绚烂得已经让你相信一切希望与期待都未曾出现过。于是决定走开，带着一只空旷而干涸的杯子，有的时候一边走一边疑惑，世界那么大，为什么那么渺小孤单的一滴雨还是会打在自己的脸庞上呢，人潮汹涌，流走的水再也无法收集，过去的心境再也无法找寻。有的时候，你在一些奇怪的梦里恍惚地以为曾经的一汪水，还心满意足地躺在自己杯子里面，只有醒过来的时候才了解，即使是沧海，多年之后也化作了桑田。杯子在多数时候，盛装的仅仅是半杯水，遇见的那个人依然似乎无法填补内心的空洞，时间一点一点地过去，水也一点一点地蒸发掉，你开始觉得他越来越无法满足你的全部幻想全部期待，对望的时候，彼此的眼里充满了空洞犹疑。杯子里面的水终于全部消失。分离是如此容易的一件事，就连曾经淡淡的水痕都刹那间无影无踪。生活似乎回到了最初的样子，天依旧蓝得透心，城市依旧匆忙得落寞。只是你不明白，为什么在每一个狂欢之夜，隐藏在人群中望着烟花绽放的夜空，会一边默默地流泪，一边强作笑颜。你对自己说是因为感动于这绚烂，没错，一切都太绚烂，绚烂得已经让你不知所措，绚烂得已经让你相信一切希望与期待都未曾出现过。于是决定走开，带着一只空旷而干涸的杯子，有的时候一边走一边疑惑，世界那么大，为什么那么渺小孤单的一滴雨还是会打在自己的脸庞上呢，人潮汹涌，流走的水再也无法收集，过去的心境再也无法找寻。有的时候，你在一些奇怪的梦里恍惚地以为曾经的一汪水，还心满意足地躺在自己杯子里面，只有醒过来的时候才了解，即使是沧海，多年之后也化作了桑田。杯子在多数时候，盛装的仅仅是半杯水，遇见的那个人依然似乎无法填补内心的空洞，时间一点一点地过去，水也一点一点地蒸发掉，你开始觉得他越来越无法满足你的全部幻想全部期待，对望的时候，彼此的眼里充满了空洞犹疑。杯子里面的水终于全部消失。分离是如此容易的一件事，就连曾经淡淡的水痕都刹那间无影无踪。生活似乎回到了最初的样子，天依旧蓝得透心，城市依旧匆忙得落寞。只是你不明白，为什么在每一个狂欢之夜，隐藏在人群中望着烟花绽放的夜空，会一边默默地流泪，一边强作笑颜。你对自己说是因为感动于这绚烂，没错，一切都太绚烂，绚烂得已经让你不知所措，绚烂得已经让你相信一切希望与期待都未曾出现过。于是决定走开，带着一只空旷而干涸的杯子，有的时候一边走一边疑惑，世界那么大，为什么那么渺小孤单的一滴雨还是会打在自己的脸庞上呢，人潮汹涌，流走的水再也无法收集，过去的心境再也无法找寻。有的时候，你在一些奇怪的梦里恍惚地以为曾经的一汪水，还心满意足地躺在自己杯子里面，只有醒过来的时候才了解，即使是沧海，多年之后也化作了桑田。
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_friend">SearchFriendActivity</string>
    <string name="title_activity_text_size_set">TextSizeSetActivity</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_choose_photo">ChoosePhotoActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_map_show">MapShowActivity</string>
    <string name="title_activity_add_emoji">AddEmojiActivity</string>
    <string name="title_activity_choose_emoji">ChooseEmojiActivity</string>
    <string name="title_activity_reg_next">RegNextActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_change_push_voice">ChangePushVoiceActivity</string>
    <string name="title_activity_search_local">SearchLocalActivity</string>
    <string name="title_activity_log_or_reg">LogOrRegActivity</string>
    <string name="title_activity_group_mem">GroupMemActivity</string>
</resources>
