<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" >
		
        <TextView
            android:id="@+id/log_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="airchat"
            android:textSize="42sp"
            android:textColor="@color/blue_bg" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="30dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account"
                    android:textSize="14sp"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:theme="@style/MyEditText" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="25dp" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:textSize="14sp"
                    android:theme="@style/MyEditText"
                    android:textAlignment="center"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:layout_marginTop="40dp"
            android:gravity="center"
            android:background="@drawable/btn_login_shape"
            android:text="登录"
            android:textColor="@color/white_bg"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:background="@color/clear"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/tv_findPwd"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="left"
                android:paddingLeft="30dp"
                android:text="@string/account_find_pwd"
                android:background="@color/clear"
                android:textColor="@color/blue_text"
                android:textSize="14sp" />

            <Button
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:layout_height="40dp"
                android:gravity="center"
                android:textAlignment="textEnd"
                android:paddingRight="30dp"
                android:text="@string/account_other"
                android:background="@color/clear"
                android:textColor="@color/blue_text"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>